--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "angular-resource": "~1.4.1"
   },
   "devDependencies": {
-    "angular-material": "~0.10.0"
+    "angular-material": "~0.10.0",
+    "angular-messages": "~1.4.2"
   }
 }
